Movimientos.html responsive done

--- a/Logistica/Movimientos.html
+++ b/Logistica/Movimientos.html
@@ -118,7 +118,7 @@
             <div class="tarjeta row-direction">
                 <div>
                     <h6 class="fw-bold mb-2">Buscar:</h6>
-                    <div class="input-div search"><input type="search" id="input-search" class="search-input" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search form-control-sm">
+                    <div class="input-div search"><input type="search" id="input-search" class="search-input placeholder" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search form-control-sm">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
                             <path d="M21 21l-6 -6"></path>
@@ -126,11 +126,11 @@
                 </div>
                 <div>
                     <h6 class="mb-2 fw-bold">Fecha inicial:</h6>
-                    <div class="input-div"><input id="input-fecha1" class="date-input form-control-sm" type="date"></div>
+                    <div class="input-div"><input id="input-fecha1" class="date-input form-control-sm placeholder" type="date"></div>
                 </div>
                 <div>
                     <h6 class="mb-2 fw-bold">Fecha final:</h6>
-                    <div class="input-div"><input id="input-fecha2" class="date-input form-control-sm" type="date"></div>
+                    <div class="input-div"><input id="input-fecha2" class="date-input form-control-sm placeholder" type="date"></div>
                 </div>
             </div>
             <div class="tarjeta">
@@ -187,7 +187,7 @@
             <div class="tarjeta">
                 <div class="card-title-group">
                     <h4>Detalles de movimiento</h4>
-                    <div class="corner-group"><button class="btn" id="btnCancelarMovimiento" type="button">Cancelar</button><button class="btn btn-primary" id="btnGuardarMovimiento" type="button">Guardar</button><button class="btn b" id="btnEditarMovimiento" type="button">Editar</button></div>
+                    <div class="corner-group"><button class="btn secondary-btn" id="btnCancelarMovimiento" type="button">Cancelar</button><button class="btn fw-bold btn-primary" id="btnGuardarMovimiento" type="button">Guardar</button><button class="btn b secondary-btn" id="btnEditarMovimiento" type="button">Editar</button></div>
                 </div>
                 <h6 class="fw-bold">Condiciones de entrega:</h6>
                 <p class="long-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>Vivamus tempus mi risus, et euismod magna rhoncus a. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. <br>Donec quis ligula orci. </p>
