--- a/Ventas/OCClientes.html
+++ b/Ventas/OCClientes.html
@@ -119,7 +119,7 @@
                 <div>
                     <h6 class="fw-semibold mb-2">Buscar:</h6>
                     <div class="input-div search">
-                        <input type="search" id="input-search" class="search-input form-control-sm" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
+                        <input type="search" id="input-search" class="search-input form-control-sm placeholder" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
                             <path d="M21 21l-6 -6"></path>
@@ -128,19 +128,19 @@
                 <div> 
                     <h6  class="fw-semibold mb-2">Fecha inicial:</h6>
                     <div class="input-div">
-                        <input id="input-fecha1" class="date-input form-control-sm" type="date"></div>
+                        <input id="input-fecha1" class="date-input form-control-sm placeholder" type="date"></div>
                 </div>
                 <div>
                     <h6 class="fw-semibold mb-2">Fecha final:</h6>
                     <div class="input-div">
-                        <input id="input-fecha2" class="date-input form-control-sm" type="date"></div>
+                        <input id="input-fecha2" class="date-input form-control-sm placeholder" type="date"></div>
                 </div>
             </div>
             <div class="tarjeta">
                 <h4 id="tituloCotizaciones">Cotizaciones a clientes:&nbsp;<span id="countCotizaciones">n</span></h4>
                 <div class="table-group">
                     <div class="table-responsive" id="tblCotizaciones">
-                        <table class="table">
+                        <table class="table table-striped table-hover">
                             <thead>
                                 <tr>
                                     <th>Req</th>
@@ -202,7 +202,7 @@
             <div class="tarjeta">
                 <div class="card-title-group">
                     <h4 id="tituloDetalle">Detalle de órden de compra</h4>
-                    <div class="corner-group"><button class="btn fw-bold" id="btnCancelarOC" type="button">Cancelar</button><button class="btn btn-primary fw-bold" id="btnGuardarOC" type="button">Guardar</button><button class="btn b fw-bold" id="btnEditarOC" type="button">Editar</button></div>
+                    <div class="corner-group"><button class="btn  secondary-btn" id="btnCancelarOC" type="button">Cancelar</button><button class="btn btn-primary fw-bold" id="btnGuardarOC" type="button">Guardar</button><button class="btn b secondary-btn" id="btnEditarOC" type="button">Editar</button></div>
                 </div>
                 <div class="info-row">
                     <div class="info-detail max-height">
@@ -232,11 +232,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="info-even-row">
+                <div class="info-even-row info-even-row-mob">
                     <div>
                         <h5 id="subtitle-productos" class="mb-3 fw-bold">Productos:&nbsp;<span id="countProductos">n</span></h5>
                         <div class="table-responsive" id="tblProductos">
-                            <table class="table">
+                            <table class="table table-striped table-hover">
                                 <thead>
                                     <tr>
                                         <th>Producto</th>
@@ -275,7 +275,7 @@
                         </div>
                         <h6 class="fw-semibold">Abonos:&nbsp;<span id="countAbonos">n</span></h6>
                         <div class="table-responsive" id="tblAbonos">
-                            <table class="table">
+                            <table class="table table-striped table-hover">
                                 <thead>
                                     <tr>
                                         <th>Descripción</th>
@@ -317,7 +317,7 @@
                         </svg></div>
                 </div>
                 <div class="table-responsive" id="tblHistorial">
-                    <table class="table">
+                    <table class="table table-striped table-hover ">
                         <thead>
                             <tr>
                                 <th>Elemento</th>
