code revise done

--- a/Compras/OCClientes.html
+++ b/Compras/OCClientes.html
@@ -112,7 +112,7 @@
     </div>
     <div id="page-wraper">
         <div id="top-menu" class="buttons">
-            <h3 id="page-title">Compras: OC clientes pendientes</h3><a class="btn fw-semibold" role="button" id="btnComprar" href="Compras/OCProveedores.html">Comprar</a>
+            <h3 id="page-title">Compras: OC clientes pendientes</h3><a class="btn secondary-btn" role="button" id="btnComprar" href="Compras/OCProveedores.html">Comprar</a>
         </div>
         <div id="content" class="content-column">
 
