--- a/Logistica/Movimientos.html
+++ b/Logistica/Movimientos.html
@@ -118,7 +118,7 @@
             <div class="tarjeta row-direction">
                 <div>
                     <h6 class="fw-bold mb-2">Buscar:</h6>
-                    <div class="input-div search"><input type="search" id="input-search" class="search-input placeholder" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search form-control-sm">
+                    <div class="input-div search"><input type="search" id="input-search" class="search-input form-control-sm placeholder-text" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search form-control-sm">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
                             <path d="M21 21l-6 -6"></path>
@@ -126,11 +126,11 @@
                 </div>
                 <div>
                     <h6 class="mb-2 fw-bold">Fecha inicial:</h6>
-                    <div class="input-div"><input id="input-fecha1" class="date-input form-control-sm placeholder" type="date"></div>
+                    <div class="input-div"><input id="input-fecha1" class="date-input form-control-sm placeholder-text" type="date"></div>
                 </div>
                 <div>
                     <h6 class="mb-2 fw-bold">Fecha final:</h6>
-                    <div class="input-div"><input id="input-fecha2" class="date-input form-control-sm placeholder" type="date"></div>
+                    <div class="input-div"><input id="input-fecha2" class="date-input form-control-sm placeholder-text" type="date"></div>
                 </div>
             </div>
             <div class="tarjeta">
@@ -212,14 +212,14 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="info-even-row my-3 ">
+                <div class="info-even-row info-even-row-mob my-3 ">
                     <div id="OCClientes-grupo">
                         <h6 class="fw-bold mb-2">OC clientes:&nbsp;<span id="countOCClientes">n</span></h6>
-                        <div class="list-group"><a class="list-group-item list-group-item-action"><span>Número de OC</span></a><a class="list-group-item list-group-item-action"><span><span style="color: rgb(58, 58, 60); background-color: rgb(255, 255, 255);">Número de OC</span></span></a><a class="list-group-item list-group-item-action link-p"><span><span style="color: rgb(58, 58, 60); background-color: rgb(255, 255, 255);">Número de OC</span></span></a></div>
+                        <div class="list-group"><a class="list-group-item list-group-item-action"><span>Número de OC</span></a><a class="list-group-item list-group-item-action"><span><span style="color: rgb(58, 58, 60); background-color: rgb(255, 255, 255);">Número de OC</span></span></a><a class="list-group-item list-group-item-action "><span><span style="color: rgb(58, 58, 60); background-color: rgb(255, 255, 255);">Número de OC</span></span></a></div>
                     </div>
                     <div id="OCProveedores-grupo">
                         <h6 class="fw-bold mb-2">OC proveedores:&nbsp;<span id="countOCProveedores">n</span></h6>
-                        <div class="list-group"><a class="list-group-item list-group-item-action"><span>Número de OC</span></a><a class="list-group-item list-group-item-action"><span><span style="color: rgb(58, 58, 60); background-color: rgb(255, 255, 255);">Número de OC</span></span></a><a class="list-group-item list-group-item-action link-p"><span><span style="color: rgb(58, 58, 60); background-color: rgb(255, 255, 255);">Número de OC</span></span></a></div>
+                        <div class="list-group"><a class="list-group-item list-group-item-action"><span>Número de OC</span></a><a class="list-group-item list-group-item-action"><span><span style="color: rgb(58, 58, 60); background-color: rgb(255, 255, 255);">Número de OC</span></span></a><a class="list-group-item list-group-item-action "><span><span style="color: rgb(58, 58, 60); background-color: rgb(255, 255, 255);">Número de OC</span></span></a></div>
                     </div>
                 </div>
                 <h6  class="fw-bold ">Productos en movimiento: n</h6>
