--- a/Compras.html
+++ b/Compras.html
@@ -119,9 +119,10 @@
         </div>
         <div id="content" class="content-mob">
             <div class="tarjeta">
-                <div class="card-title-group">
+                <div class="d-flex justify-content-between">
                     <h4>Req con planilla:&nbsp;<span id="countReqConPlanilla">n</span></h4>
-                    <div class="corner-group"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-alert-circle" id="iconRed" color="var(--bs-danger)">
+                    <div class="d-flex gap-3">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-alert-circle" id="iconRed" color="var(--bs-danger)">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"></path>
                             <path d="M12 8v4"></path>
@@ -266,7 +267,7 @@
                     <div class="list-group deck-border" id="divOCProveedores"><a class="list-group-item list-group-item-action deck-row" href="Compras/OCProveedores.html">
                             <div class="deck-title">
                                 <h5>Req: Nombre de req</h5>
-                                <div class="info-even-row max-height"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-mail oc-icon envio-cliente">
+                                <div class="info-even-row  max-height"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-mail oc-icon envio-cliente">
                                         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                         <path d="M3 7a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10z"></path>
                                         <path d="M3 7l9 6l9 -6"></path>
