--- a/Compras/ConPlanilla.html
+++ b/Compras/ConPlanilla.html
@@ -285,7 +285,8 @@
             <div id="divProductosHistorial" class="tarjeta">
                
                 <h4 class="align-self-start">Buscar productos en historial:&nbsp;</h4>
-                <div class="btn-search-group mb-3">    <div class="input-div search  ">
+                <div class="d-flex justify-content-between gap-3 flex-column flex-md-row  ">  
+                      <div class="input-div search ">
                             <input type="search" id="input-search" class="search-input  form-control" autocomplete="on"
                                 placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em"
                                 height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
@@ -387,8 +388,8 @@
                 </div>
             </div>
             <div id="divOfertas" class="tarjeta">
-                <div class="card-title-group">
-                    <h4>Ofertas:&nbsp;<span id="countOfertas">n</span></h4><button class="btn fw-semibold"
+                <div class="d-flex justify-content-between">
+                    <h4>Ofertas:&nbsp;<span id="countOfertas">n</span></h4><button class="btn secondary-btn"
                         id="btnNuevaOferta" type="button">Añadir oferta</button>
                 </div>
                 <div class="table-responsive" id="tblOfertas">
@@ -425,13 +426,13 @@
                 <div class="card-title-group">
                     <h4>Detalles de oferta</h4>
                     <div class="corner-group"><button class="btn secondary-btn" id="btnCancelarOferta"
-                            type="button">Cancelar</button><button class="btn btn-primary fw-semibold"
+                            type="button">Cancelar</button><button class="btn btn-primary fw-bold"
                             id="btnGuardarOferta" type="button">Guardar</button><button class="btn b secondary-btn"
                             id="btnEditarOferta" type="button">Editar</button></div>
                 </div>
                 <div id="seleccionarProveedor">
                     <div class="btn-search-group mb-3">
-                        <button class="btn fw-semibold" id="btnNuevoProveedor" type="button"
+                        <button class="btn secondary-btn " id="btnNuevoProveedor" type="button"
                             data-bs-target="#modal-cliente" data-bs-toggle="modal">+ Proveedor</button>
                         <div class="input-div search">
                             <input type="search" id="input-search-Proveedor" class="search-input form-control"
