--- a/Logistica.html
+++ b/Logistica.html
@@ -119,9 +119,9 @@
         </div>
         <div id="content" class="content-mob">
             <div class="tarjeta">
-                <div class="card-title-group">
+                <div class="d-flex justify-content-between">
                     <h4>Nuevas OCs:&nbsp;<span id="countNuevaOC">n</span></h4>
-                    <div class="corner-group"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-alert-circle" id="iconRed" color="var(--bs-danger)">
+                    <div class="d-flex gap-3"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-alert-circle" id="iconRed" color="var(--bs-danger)">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"></path>
                             <path d="M12 8v4"></path>
