--- a/Ventas/AnadirRequerimientos.html
+++ b/Ventas/AnadirRequerimientos.html
@@ -124,13 +124,13 @@
                         <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-cliente .item-1" aria-expanded="false" aria-controls="accordion-cliente .item-1"><strong>Cliente: &nbsp;</strong><span id="detalleCliente">Ninguno elegido</span></button></h2>
                         <div class="accordion-collapse collapse item-1" role="tabpanel" data-bs-parent="#accordion-cliente">
                             <div class="accordion-body">
-                                <div class="btn-search-group">
-                                    <div class="input-div search   mb-3">
-                                        <input type="search" id="input-search-cliente" class="search-input form-control" autocomplete="on"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
+                                <div class="btn-search-group mb-3">
+                                    <div class="input-div search  ">
+                                        <input type="search" id="input-search-cliente" class="search-input form-control-sm placeholder-text" autocomplete="on"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
                                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                             <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
                                             <path d="M21 21l-6 -6"></path>
-                                        </svg></div><button class="btn fw-bold" id="btnNuevoCliente" type="button">+ Cliente</button>
+                                        </svg></div><button class="btn secondary-btn" id="btnNuevoCliente" type="button">+ Cliente</button>
                                 </div>
                                 <div class="table-responsive" id="tblCliente">
                                     <table class="table">
@@ -179,13 +179,13 @@
                         <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-contacto .item-1" aria-expanded="false" aria-controls="accordion-contacto .item-1"><strong>Contacto cliente:&nbsp;</strong><span id="detalleContacto">Ninguno elegido</span></button></h2>
                         <div class="accordion-collapse collapse item-1" role="tabpanel" data-bs-parent="#accordion-contacto">
                             <div class="accordion-body">
-                                <div class="btn-search-group">
-                                    <div class="input-div search mb-3">
-                                        <input type="search" id="input-search-contacto" class="search-input form-control" autocomplete="on"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
+                                <div class="btn-search-group mb-3">
+                                    <div class="input-div search ">
+                                        <input type="search" id="input-search-contacto" class="search-input form-control-sm placeholder-text" autocomplete="on"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
                                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                             <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
                                             <path d="M21 21l-6 -6"></path>
-                                        </svg></div><button class="btn fw-bold" id="btnNuevoContacto" type="button" data-bs-target="#modal-contacto-nuevo" data-bs-toggle="modal">+ Contacto</button>
+                                        </svg></div><button class="btn secondary-btn" id="btnNuevoContacto" type="button" data-bs-target="#modal-contacto-nuevo" data-bs-toggle="modal">+ Contacto</button>
                                 </div>
                                 <div class="table-responsive" id="tblContacto">
                                     <table class="table">
@@ -261,11 +261,11 @@
                         <div class="accordion-collapse collapse item-1" role="tabpanel" data-bs-parent="#accordion-lugar">
                             <div class="accordion-body">
                                 <div class="btn-search-group mb-3">
-                                    <div class="input-div search"><input type="search" id="input-search-lugar" class="search-input" autocomplete="on"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
+                                    <div class="input-div search"><input type="search" id="input-search-lugar" class="search-input form-control-sm placeholder-text" autocomplete="on"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
                                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                             <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
                                             <path d="M21 21l-6 -6"></path>
-                                        </svg></div><button class="btn fw-semibold" id="btnNuevoLugar" type="button">+ Lugar</button>
+                                        </svg></div><button class="btn secondary-btn" id="btnNuevoLugar" type="button">+ Lugar</button>
                                 </div>
                                 <div class="table-responsive" id="tblDireccion">
                                     <table class="table">
