--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <section id="loginForm" class="position-relative py-4 py-xl-5">
         <div class="container tarjeta logiIn"><img id="logo" src="assets/img/logo%20largo.png">
             <form class="text-center" method="POST">
-                <div class="mb-3"><input class="form-control" type="text" id="txt_usuario" name="usuario" placeholder="Usuario"></div>
-                <div class="mb-3"><input class="form-control code" type="password" id="txt_password" name="password" placeholder="Contraseña"></div>
+                <div class="mb-3"><input class="form-control py-2 rounded-1 placeholder-text" type="text" id="txt_usuario" name="usuario" placeholder="Usuario"></div>
+                <div class="mb-3"><input class="form-control  py-2 rounded-1 placeholder-text code" type="password" id="txt_password" name="password" placeholder="Contraseña"></div>
                 <div class="mb-3"><button class="btn btn-primary fw-semibold d-block w-100 btn_login" id="btnIniciarSesion" type="button" name="submit">Iniciar sesión</button></div><a class="text-muted fw-semibold" href="mailto:sistemasfigsac@gmail.com">¿Olvidaste tu contraseña?</a>
             </form>
         </div>
