--- a/Administracion.html
+++ b/Administracion.html
@@ -298,7 +298,7 @@
                 <div>
                     <h3 class="text-center mb-3  fw-bold" id="selected-date">Vencimientos de 13/04/2024</h3>
                     <div class="p2">
-                        <table class="table table-bordered mt-3 stripe" id="tabla-vencimientos">
+                        <table class="table  mt-3  table-striped table-hover" id="tabla-vencimientos">
                             <thead class="p1">
                                 <tr>
                                     <th>Comprobante</th>
