--- a/Administracion/Conciliacion.html
+++ b/Administracion/Conciliacion.html
@@ -119,7 +119,7 @@
                 <div>
                     <h6 class="fw-bold mb-2">Buscar:</h6>
                     <div class="input-div search">
-                        <input type="search" id="input-search" class="search-input form-control-sm placeholder" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
+                        <input type="search" id="input-search" class="search-input form-control-sm placeholder-text" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
                             <path d="M21 21l-6 -6"></path>
@@ -127,17 +127,17 @@
                 </div>
                 <div>
                     <h6 class="fw-bold mb-2">Fecha inicial:</h6>
-                    <div class="input-div"><input id="input-fecha1" class="date-input form-control-sm placeholder" type="date"></div>
+                    <div class="input-div"><input id="input-fecha1" class="date-input form-control-sm placeholder-text" type="date"></div>
                 </div>
                 <div>
                     <h6 class="fw-bold mb-2">Fecha final:</h6>
-                    <div class="input-div"><input id="input-fecha2" class="date-input form-control-sm placeholder" type="date"></div>
+                    <div class="input-div"><input id="input-fecha2" class="date-input form-control-sm placeholder-text" type="date"></div>
                 </div>
             </div>
             <div class="info-even-row info-even-row-update">
                 <div class="tarjeta ">
                     <div class="card-title-group">
-                        <h4>Registro de bancos</h4><button class="btn b fw-bold" id="btnImportar" type="button">Importar reporte</button>
+                        <h4>Registro de bancos</h4><button class="btn b secondary-btn" id="btnImportar" type="button">Importar reporte</button>
                     </div>
                     <h5 class="fw-semibold">Interbank:&nbsp;<span id="countInterbank">n</span></h5>
                     <div class="table-responsive" id="tblIntertabk">
@@ -208,7 +208,7 @@
             </div>
             <div class="tarjeta ">
                 <h4>Conciliación</h4>
-                <div class="info-even-row">
+                <div class="info-even-row info-even-row-mob">
                     <div class="card card-border admin-tarjeta">
                         <h6 class="card-title">Registro de banco</h6>
                         <div class="card-body admin-tarjeta-limpia"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-mood-smile-beam text-warning check-admin">
@@ -232,10 +232,10 @@
                         </div>
                     </div>
                     <div>
-                        <div class="corner-group"><button class="btn" id="btnIzquierda" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-arrow-badge-left-filled">
+                        <div class="d-flex justify-content-between mb-3"><button class="btn secondary-btn" id="btnIzquierda" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-arrow-badge-left-filled">
                                     <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                     <path d="M17 6h-6a1 1 0 0 0 -.78 .375l-4 5a1 1 0 0 0 0 1.25l4 5a1 1 0 0 0 .78 .375h6l.112 -.006a1 1 0 0 0 .669 -1.619l-3.501 -4.375l3.5 -4.375a1 1 0 0 0 -.78 -1.625z" stroke-width="0" fill="currentColor"></path>
-                                </svg></button><button class="btn btn-primary" id="btnAceptarSugerencia" type="button">Aceptar sugerencia</button><button class="btn max-height" id="btnDerecha" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-arrow-badge-right-filled">
+                                </svg></button><button class="btn fw-bold btn-primary" id="btnAceptarSugerencia" type="button">Aceptar sugerencia</button><button class="btn secondary-btn max-height" id="btnDerecha" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-arrow-badge-right-filled">
                                     <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                     <path d="M7 6l-.112 .006a1 1 0 0 0 -.669 1.619l3.501 4.375l-3.5 4.375a1 1 0 0 0 .78 1.625h6a1 1 0 0 0 .78 -.375l4 -5a1 1 0 0 0 0 -1.25l-4 -5a1 1 0 0 0 -.78 -.375h-6z" stroke-width="0" fill="currentColor"></path>
                                 </svg></button></div>
