--- a/Administracion/Documentos.html
+++ b/Administracion/Documentos.html
@@ -112,14 +112,14 @@
     </div>
     <div id="page-wraper">
         <div id="top-menu" class="buttons">
-            <h3 id="page-title">Administración: Documentos</h3><a class="btn fw-bold" role="button" href="https://api-seguridad.sunat.gob.pe/v1/clientessol/4f3b88b3-d9d6-402a-b85d-6a0bc857746a/oauth2/loginMenuSol" target="_blank">SUNAT</a>
+            <h3 id="page-title">Administración: Documentos</h3><a class="btn secondary-btn" role="button" href="https://api-seguridad.sunat.gob.pe/v1/clientessol/4f3b88b3-d9d6-402a-b85d-6a0bc857746a/oauth2/loginMenuSol" target="_blank">SUNAT</a>
         </div>
         <div id="content" class="content-column">
             <div class="tarjeta row-direction">
                 <div>
                     <h6 class="fw-semibold mb-2">Buscar:</h6>
                     <div class="input-div search">
-                        <input type="search" id="input-search" class="search-input form-control-sm" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
+                        <input type="search" id="input-search" class="search-input form-control-sm placeholder-text" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
                             <path d="M21 21l-6 -6"></path>
@@ -127,11 +127,11 @@
                 </div>
                 <div>
                     <h6 class="fw-semibold mb-2">Fecha inicial:</h6>
-                    <div class="input-div"><input id="input-fecha1" class="date-input form-control-sm" type="date"></div>
+                    <div class="input-div"><input id="input-fecha1" class="date-input form-control-sm placeholder-text" type="date"></div>
                 </div>
                 <div>
                     <h6 class="fw-semibold mb-2">Fecha final:</h6>
-                    <div class="input-div"><input id="input-fecha2" class="date-input form-control-sm" type="date"></div>
+                    <div class="input-div"><input id="input-fecha2" class="date-input form-control-sm placeholder-text" type="date"></div>
                 </div>
             </div>
             <div class="tarjeta">
