--- a/Inicio.html
+++ b/Inicio.html
@@ -160,7 +160,7 @@
                 <div class="col-12 col-md-4">
                     <h6 class="fw-semibold mb-2">Buscar:</h6>
                     <div class="input-div search">
-                        <input type="search" id="input-search" class="search-input form-control-sm placeholder  " autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
+                        <input type="search" id="input-search" class="search-input form-control-sm placeholder-text  " autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
                             <path d="M21 21l-6 -6"></path>
@@ -169,11 +169,11 @@
                 <div class="col-12 col-md-4">
                     <h6 class="fw-semibold mb-2" >Fecha inicial:</h6>
                     <div class="input-div">
-                        <input id="input-fecha1" class="date-input form-control-sm placeholder " type="date"></div>
+                        <input id="input-fecha1" class="date-input form-control-sm placeholder-text " type="date"></div>
                 </div>
                 <div class="col-12 col-md-4">
                     <h6 class="fw-semibold mb-2" >Fecha final:</h6>
-                    <div class="input-div"><input id="input-fecha2" class="date-input form-control-sm  placeholder " type="date"></div>
+                    <div class="input-div"><input id="input-fecha2" class="date-input form-control-sm  placeholder-text " type="date"></div>
                 </div>
             </div>
             <div class="info-even-row todo">
