--- a/Requerimientos.html
+++ b/Requerimientos.html
@@ -144,7 +144,7 @@
                 <div>
                     <h6 class="fw-bold mb-2">Buscar:</h6>
                     <div class="input-div search">
-                        <input type="search" id="input-search" class="search-input form-control-sm placeholder" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
+                        <input type="search" id="input-search" class="search-input form-control-sm placeholder-text" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
                             <path d="M21 21l-6 -6"></path>
@@ -152,11 +152,11 @@
                 </div>
                 <div>
                     <h6 class="fw-bold mb-2">Fecha inicial:</h6>
-                    <div class="input-div"><input id="input-fecha1" class="date-input form-control-sm placeholder " type="date"></div>
+                    <div class="input-div"><input id="input-fecha1" class="date-input form-control-sm placeholder-text " type="date"></div>
                 </div>
                 <div>
                     <h6 class="fw-bold mb-2">Fecha final:</h6>
-                    <div class="input-div"><input id="input-fecha2" class="date-input form-control-sm placeholder" type="date"></div>
+                    <div class="input-div"><input id="input-fecha2" class="date-input form-control-sm placeholder-text" type="date"></div>
                 </div>
             </div>
             <div class="tarjeta">
@@ -245,17 +245,17 @@
                         </div>
                         <div class="info-detail">
                             <h6 class="fw-bold">Nombre:</h6>
-                            <input type="text" id="detalleNombre" class="info-input form-control-sm" placeholder=" Type Nombre">
+                            <input type="text" id="detalleNombre" class="info-input form-control-sm placeholder-text" >
                         </div>
                         <div class="info-detail">
-                            <h6 class="fw-bold">Cliente:</h6><button class="btn fw-semibold" id="detalleCliente" type="button" data-bs-target="#modal-clientes" data-bs-toggle="modal">Ninguno elegido<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-chevron-down">
+                            <h6 class="fw-bold">Cliente:</h6><button class="btn secondary-btn" id="detalleCliente" type="button" data-bs-target="#modal-clientes" data-bs-toggle="modal">Ninguno elegido<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-chevron-down">
                                     <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                     <path d="M6 9l6 6l6 -6"></path>
                                 </svg></button>
                         </div>
                         <div class="info-detail">
                             <h6 class="fw-bold">Contacto cliente:</h6>
-                            <button class="btn fw-semibold" id="detalleContacto" type="button" data-bs-target="#modal-contactos" data-bs-toggle="modal">Ninguno elegido<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-chevron-down">
+                            <button class="btn secondary-btn" id="detalleContacto" type="button" data-bs-target="#modal-contactos" data-bs-toggle="modal">Ninguno elegido<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-chevron-down">
                                     <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                     <path d="M6 9l6 6l6 -6"></path>
                                 </svg></button>
@@ -263,7 +263,7 @@
                     </div>
                     <div class="d-flex flex-column gap-3">
                         <div class="info-detail">
-                            <h6 class="fw-bold">Lugar de entrega:</h6><button class="btn fw-semibold" id="detalleLugar" type="button" data-bs-target="#modal-lugares" data-bs-toggle="modal">Ninguno elegido<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-chevron-down">
+                            <h6 class="fw-bold">Lugar de entrega:</h6><button class="btn secondary-btn" id="detalleLugar" type="button" data-bs-target="#modal-lugares" data-bs-toggle="modal">Ninguno elegido<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-chevron-down">
                                     <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                     <path d="M6 9l6 6l6 -6"></path>
                                 </svg></button>
