--- a/Ventas/AnadirOCClientes.html
+++ b/Ventas/AnadirOCClientes.html
@@ -120,7 +120,7 @@
             <div class="tarjeta row-direction">
                 <div>
                     <h6 class="fw-semibold mb-2">Buscar:</h6>
-                    <div class="input-div search"><input type="search" id="input-search" class="search-input form-control-sm placeholder" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
+                    <div class="input-div search"><input type="search" id="input-search" class="search-input form-control-sm placeholder-text" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
                             <path d="M21 21l-6 -6"></path>
@@ -128,11 +128,11 @@
                 </div>
                 <div>
                     <h6  class="fw-semibold mb-2">Fecha inicial:</h6>
-                    <div class="input-div"><input id="input-fecha1" class="date-input form-control-sm placeholder" type="date"></div>
+                    <div class="input-div"><input id="input-fecha1" class="date-input form-control-sm placeholder-text" type="date"></div>
                 </div>
                 <div>
                     <h6  class="fw-semibold mb-2">Fecha final:</h6>
-                    <div class="input-div"><input id="input-fecha2" class="date-input form-control-sm placeholder" type="date"></div>
+                    <div class="input-div"><input id="input-fecha2" class="date-input form-control-sm placeholder-text" type="date"></div>
                 </div>
             </div>
             <div class="tarjeta">
@@ -200,7 +200,7 @@
                 <h4>Añadir detalles de orden de compra</h4>
                 <div class="info-row justify-content-between">
                     <div class="info-detail max-height">
-                        <h6 class="fw-semibold">Número de OC:</h6><input type="text" id="oc-numero" class="info-input form-control-sm">
+                        <h6 class="fw-semibold">Número de OC:</h6><input type="text" id="oc-numero" class="info-input form-control-sm placeholder-text">
                     </div>
                     <div class="info-detail ">
                         <h6 class="fw-semibold "> OC PDF: </h6> <div><input type="file" class="form-control" id="oc-adjunto"></div>
@@ -213,7 +213,7 @@
                     </div>
                     <div class="info-detail">
                         <h6 class="fw-semibold">Fecha de emisión:</h6>
-                        <div class="input-div"><input id="oc-fecha-emision" class="date-input form-control-sm" type="date"></div>
+                        <div class="input-div"><input id="oc-fecha-emision" class="date-input form-control-sm placeholder-text" type="date"></div>
                     </div>
                 </div>
                 <div class="info-row">
@@ -226,7 +226,7 @@
                         <p id="oc-igv">x Soles/Dolares</p>
                     </div>
                     <div class="info-detail expand">
-                        <h6 class="fw-semibold">Lugar de entrega de cliente:</h6><button class="btn" id="lugar-entrega" type="button" data-bs-target="#modal-lugares" data-bs-toggle="modal">Ninguno elegido<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-chevron-down">
+                        <h6 class="fw-semibold">Lugar de entrega de cliente:</h6><button class="btn secondary-btn" id="lugar-entrega" type="button" data-bs-target="#modal-lugares" data-bs-toggle="modal">Ninguno elegido<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-chevron-down">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                 <path d="M6 9l6 6l6 -6"></path>
                             </svg></button>
