--- a/Ventas/Cotizaciones.html
+++ b/Ventas/Cotizaciones.html
@@ -119,7 +119,7 @@
                 <div>
                     <h6 class="fw-semibold mb-2">Buscar:</h6>
                     <div class="input-div search">
-                        <input  type="search" id="input-search" class="search-input form-control-sm placeholder" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
+                        <input  type="search" id="input-search" class="search-input form-control-sm placeholder-text" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
                             <path d="M21 21l-6 -6"></path>
@@ -128,11 +128,11 @@
                 <div>
                     <h6 class="fw-semibold mb-2" >Fecha inicial:</h6>
                     <div class="input-div">
-                        <input id="input-fecha1" class="date-input form-control-sm placeholder" type="date"></div>
+                        <input id="input-fecha1" class="date-input form-control-sm placeholder-text" type="date"></div>
                 </div>
                 <div>
                     <h6 class="fw-semibold mb-2" >Fecha final:</h6>
-                    <div class="input-div"><input id="input-fecha2" class="date-input form-control-sm placeholder" type="date"></div>
+                    <div class="input-div"><input id="input-fecha2" class="date-input form-control-sm placeholder-text" type="date"></div>
                 </div>
             </div>
             <div class="tarjeta">
@@ -179,7 +179,7 @@
             <div class="tarjeta">
                 <div class="card-title-group">
                     <h4>Detalle de cotización</h4>
-                    <div class="corner-group"><button class="btn fw-bold" id="btnCancelarCotizacion" type="button">Cancelar</button><button class="fw-bold btn btn-primary" id="btnGuardarCotizacion" type="button">Guardar</button><button class="btn b fw-bold" id="btnEditarCotizacion" type="button">Editar</button></div>
+                    <div class="corner-group"><button class="btn secondary-btn" id="btnCancelarCotizacion" type="button">Cancelar</button><button class="fw-bold btn btn-primary" id="btnGuardarCotizacion" type="button">Guardar</button><button class="btn b secondary-btn" id="btnEditarCotizacion" type="button">Editar</button></div>
                 </div>
                 <div class="info-column">
                     <h6 class="fw-semibold  ">Observaciones en cotización:</h6><textarea id="detail-observacion" class="info-input long-text" disabled="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tempus mi risus, et euismod magna rhoncus a. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec quis ligula orci. </textarea>
